fix: total showing wrong number, tab styles on mobile

--- a/react/src/components/Layout/index.scss
+++ b/react/src/components/Layout/index.scss
@@ -1,5 +1,4 @@
 header {
-  // height: 100px;
   position: relative;
   background: linear-gradient(180deg, #121212 64.11%, #1E1E1E 100%);
   padding-top: 28px;
@@ -19,7 +18,6 @@ header {
 
     .tabs {
       display: flex;
-      // position: absolute;
       bottom: 0;
       
       div {
@@ -33,6 +31,26 @@ header {
           color: white;
           border-bottom: 1px solid white;
         }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    padding-left: 15px;
+    padding-right: 15px;
+    
+    .header-bottom {
+      text-align: center;
+      
+      h1 {
+        margin-bottom: 15px;
+      }
+      
+      .tabs {
+        justify-content: center;
+        margin: 0 auto;
       }
     }
   }
